--- a/UI/app/config.html
+++ b/UI/app/config.html
@@ -5,7 +5,7 @@
                 <title>CONFIG</title>
                 <meta charset="utf-8">
             
-                <link href="css/style.css" rel="stylesheet">
+                <link href="../css/style.css" rel="stylesheet">
                 <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
                 <script src="https://kit.fontawesome.com/799568d786.js"></script>
                 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -13,7 +13,7 @@
                 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
                 <link href="https://fonts.googleapis.com/css?family=Manjari|Noto+Sans+KR&display=swap" rel="stylesheet">
                 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
-                <script src="./js/main.js"></script>
+                <script src="../js/main.js"></script>
             
             </head>
 
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div class="logo-top">
-                    <img src="./img/logomini.png"> <!-- 클릭 > reflesh -->
+                    <img src="../img/logomini.png"> <!-- 클릭 > reflesh -->
                 </div>
                 <div class="user-setting">
                     <!-- 클릭 > "LOGOUT 할까요?" > LOGGOUT -->
