--- a/UI/stats/index.html
+++ b/UI/stats/index.html
@@ -141,53 +141,28 @@
 
                                 <div class="option-header selectable">
                                     <div class="option-header-box">
-                                        <span>신규 주문</span>
+                                        <span>SECTION1</span>
                                     </div>
                                 </div>
 
                                 <div class="option-header selectable">
                                     <div class="option-header-box">
-                                        <span>진행 현황</span>
+                                        <span>SECTION2</span>
                                     </div>
                                 </div>
 
                              
                                 <div class="option-header selectable">
                                     <div class="option-header-box">
-                                        <span>브라우저</span>
+                                        <span>SECTION3</span>
                                     </div>
                                 </div>
 
                                 <div class="option-header selectable">
                                     <div class="option-header-box">
-                                        <span>사용 기기</span>
+                                        <span>SECTION4</span>
                                     </div>
                                 </div>
-
-                                <div class="option-header selectable">
-                                    <div class="option-header-box">
-                                        <span>연령</span>
-                                    </div>
-                                </div>
-
-                                <div class="option-header selectable">
-                                    <div class="option-header-box">
-                                        <span>출처</span>
-                                    </div>
-                                </div>
-
-                                <div class="option-header selectable">
-                                    <div class="option-header-box">
-                                        <span>성별</span>
-                                    </div>
-                                </div>
-
-                                <div class="option-header selectable">
-                                    <div class="option-header-box">
-                                        <span>연령별</span>
-                                    </div>
-                                </div>
-
                             </div>
                         </div>
 
