--- a/UI/stats/index.html
+++ b/UI/stats/index.html
@@ -120,8 +120,8 @@
                     <div class="main-top">
 
                         <div class="title-box">
-                            <span>STATISTICS</span>
-                            <i class="fas fa-angle-double-right"></i>
+                            <span>STATISTICS</span> 
+                            <i class="fas fa-angle-double-right"></i> 
                             <span id="channer-name">LOTTORICH1</span>
                         </div>
 
@@ -133,34 +133,40 @@
                         <div class="main-left active">
                             <div class="option-box">
 
-                                <div class="option-header active">
+                                <div class="option-header selectable active">
                                     <div class="option-header-box">
-                                        <span>INDEX</span>
+                                        <span>INDEX : 종합 차트</span>
                                     </div>
                                 </div>
 
                                 <div class="option-header selectable">
                                     <div class="option-header-box">
-                                        <span>SECTION1</span>
+                                        <span>SECTION1 : 유효 / 무효</span>
                                     </div>
                                 </div>
 
                                 <div class="option-header selectable">
                                     <div class="option-header-box">
-                                        <span>SECTION2</span>
+                                        <span>SECTION2 : 웹 / 모바일</span>
                                     </div>
                                 </div>
 
                              
                                 <div class="option-header selectable">
                                     <div class="option-header-box">
-                                        <span>SECTION3</span>
+                                        <span>SECTION3 : 유입 경로</span>
                                     </div>
                                 </div>
 
                                 <div class="option-header selectable">
                                     <div class="option-header-box">
-                                        <span>SECTION4</span>
+                                        <span>SECTION4 : 남 / 여</span>
+                                    </div>
+                                </div>
+
+                                <div class="option-header selectable">
+                                    <div class="option-header-box">
+                                        <span>SECTION5 : 진행 현황</span>
                                     </div>
                                 </div>
                             </div>
