--- a/UI/vlak/suga.html
+++ b/UI/vlak/suga.html
@@ -27,7 +27,7 @@
         <div class="login-box">
             <div class="login-label">
                 <div class="logo-box">
-                    <img src="img/logomini.png">
+                    <img src="../img/vlaklogo.png">
                 </div>
             </div>
             <div class="login-form">
