--- a/UI/app/config.html
+++ b/UI/app/config.html
@@ -94,13 +94,13 @@
             <div id="aside">
                 <aside>
                     <div class="aside-box">
-                        <a href="event.html">
+                        <a href="../app/event.html">
                             <i class="fas fa-database"></i>
                             <span>EVENT</span>
                         </a>
                     </div>
                     <div class="aside-box">
-                        <a href="stats.html">
+                        <a href="../stats/index.html">
                             <i class="fas fa-chart-bar"></i>
                             <span>STATS</span>
                         </a>
@@ -119,7 +119,7 @@
                     <div class="main-top">
 
                         <div class="title-box">
-                            <span>CONFIG<span>
+                            <span>CONFIG </span>
                                     <i class="fas fa-angle-double-right"></i>
                                     <span id="channer-name">LOTTORICH1</span>
                         </div>
