--- a/UI/app/event.html
+++ b/UI/app/event.html
@@ -101,13 +101,13 @@
                         <span>EVENT</span>
                     </div>
                     <div class="aside-box">
-                        <a href="stats.html">
+                        <a href="../stats/index.html">
                             <i class="fas fa-chart-bar"></i>
                             <span>STATS</span>
                         </a>
                     </div>
                     <div class="aside-box">
-                        <a href="config.html">
+                        <a href="../app/config.html">
                             <i class="fas fa-cogs"></i>
                             <span>CONFIG</span>
                         </a>
@@ -121,9 +121,9 @@
                     <div class="main-top">
 
                         <div class="title-box">
-                            <span>EVENT<span>
-                                    <i class="fas fa-angle-double-right"></i>
-                                    <span id="channer-name">LOTTORICH1</span>
+                            <span>EVENT</span>
+                            <i class="fas fa-angle-double-right"></i>
+                            <span id="channer-name">LOTTORICH1</span>
                         </div>
 
                     </div>
