--- a/UI/stats/index.html
+++ b/UI/stats/index.html
@@ -94,7 +94,7 @@
             <div id="aside">
                 <aside>
                     <div class="aside-box">
-                        <a href="event.html">
+                        <a href="../app/event.html">
                             <i class="fas fa-database"></i>
                             <span>EVENT</span>
                         </a>
@@ -105,7 +105,7 @@
 
                     </div>
                     <div class="aside-box">
-                        <a href="config.html">
+                        <a href="../app/config.html">
                             <i class="fas fa-cogs"></i>
                             <span>CONFIG</span>
                         </a>
@@ -133,38 +133,38 @@
                         <div class="main-left active">
                             <div class="option-box">
 
-                                <div class="option-header selectable active">
+                                <div onclick="location.href='./index.html'" class="option-header selectable active">
                                     <div class="option-header-box">
                                         <span>INDEX : 종합 차트</span>
                                     </div>
                                 </div>
 
-                                <div class="option-header selectable">
+                                <div onclick="location.href='./event_sec1.html'" class="option-header selectable">
                                     <div class="option-header-box">
                                         <span>SECTION1 : 유효 / 무효</span>
                                     </div>
                                 </div>
 
-                                <div class="option-header selectable">
+                                <div onclick="location.href='./event_sec2.html'" class="option-header selectable">
                                     <div class="option-header-box">
                                         <span>SECTION2 : 웹 / 모바일</span>
                                     </div>
                                 </div>
 
                              
-                                <div class="option-header selectable">
+                                <div onclick="location.href='./event_sec3.html'" class="option-header selectable">
                                     <div class="option-header-box">
                                         <span>SECTION3 : 유입 경로</span>
                                     </div>
                                 </div>
 
-                                <div class="option-header selectable">
+                                <div onclick="location.href='./event_sec4.html'" class="option-header selectable">
                                     <div class="option-header-box">
                                         <span>SECTION4 : 남 / 여</span>
                                     </div>
                                 </div>
 
-                                <div class="option-header selectable">
+                                <div onclick="location.href='./event_sec5.html'" class="option-header selectable">
                                     <div class="option-header-box">
                                         <span>SECTION5 : 진행 현황</span>
                                     </div>
@@ -225,7 +225,7 @@
 
                                 </div>
                                 <div class="switch-box">
-                                    <div class="chart switch active">
+                                    <div class="chart switch active none">
                                         <a><i class="fas fa-chart-pie"></i></a>
                                     </div>
                                     <div class="table switch none">
