--- a/UI/app/event.html
+++ b/UI/app/event.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <title>EVENT</title>
-    <meta charset="utf-8">
+    <head>
+        <title>ADAND OMS</title>
+        <meta charset="utf-8">
 
-    <link href="../css/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+        <!-- FONT -->
+        <link href="https://fonts.googleapis.com/css?family=Manjari|Noto+Sans+KR&display=swap" rel="stylesheet">
 
-    <script src="https://kit.fontawesome.com/799568d786.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+        <!-- CSS -->
 
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Manjari|Noto+Sans+KR&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
-    <script src="../js/main.js"></script>
-
-
+        <link href="../css/style.css" rel="stylesheet">
+        <link href="../css/common.css" rel="stylesheet">
+        <link href="../css/event-box.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
+        <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    
+        <!-- JS -->
+        <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
+        <script src="../js/main.js"></script>
+   
 </head>
 
 <body>
@@ -26,6 +32,7 @@
 
         <div id="top">
             <div class="nav-container">
+                
                 <div class="user-container">
                     <div class="channel-box none">
                         <div class="user-box">
@@ -52,6 +59,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="channel-box none">
                         <div class="user-box">
                             <div class="avatar">
@@ -64,6 +72,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="channel-box none">
 
                         <div class="user-box">
@@ -78,9 +87,11 @@
                         </div>
                     </div> 
                 </div>
+
                 <div class="logo-top">
                     <img src="../img/logomini.png"> <!-- 클릭 > reflesh -->
                 </div>
+
                 <div class="user-setting">
                     <!-- 클릭 > "LOGOUT 할까요?" > LOGGOUT -->
                     <div class="set-box">
