--- a/UI/stats/event_sec3.html
+++ b/UI/stats/event_sec3.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
 
     <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/chart-box.css" rel="stylesheet">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://kit.fontawesome.com/799568d786.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
