--- a/UI/vlak/suga.html
+++ b/UI/vlak/suga.html
@@ -5,7 +5,7 @@
                 <title>ADAND OMS LOGIN</title>
                 <meta charset="utf-8">
             
-                <link href="../css/style.css" rel="stylesheet">
+                <link href="../css/suga.css" rel="stylesheet">
                 <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
             
                 <script src="https://kit.fontawesome.com/799568d786.js"></script>
