--- a/UI/vlak/user.html
+++ b/UI/vlak/user.html
@@ -5,7 +5,8 @@
     <title>ADAND OMS</title>
     <meta charset="utf-8">
 
-    <link href="../css/admin.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/account-box.css" rel="stylesheet">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
     <script src="https://kit.fontawesome.com/799568d786.js"></script>
@@ -62,8 +63,10 @@
                     <span>USER</span>
                 </div>
                 <div class="aside-box">
+                    <a class="./channel.html">
                     <i class="fas fa-globe"></i>
                     <span>CHANNEL</span>
+                    </a>
                 </div>
             </aside>
         </div>
@@ -131,6 +134,7 @@
                     </div>
 
                     <div class="main-center">
+
                         <div class="account-box">
 
                             <div class="account-header">
@@ -148,7 +152,7 @@
                                 </div>
 
                                 <div class="mod-box">
-                                    <div class="mod-excel">
+                                    <div class="mod-plus">
                                         <i class="fas fa-plus-circle"></i>
                                     </div>
                                 </div>
@@ -157,7 +161,8 @@
                             </div>
 
                             <div class="account-body">
-                                <!-- order start -->
+
+                                <!-- account start -->
                                 <div class="account-element">
 
                                     <!-- summary -->
@@ -174,7 +179,7 @@
                                             </div>
 
                                             <div class="ev-chname">
-                                                <span>1</span>
+                                                <span>AGENCY</span>
                                             </div>
 
                                         </div>
@@ -192,45 +197,41 @@
                                                 <span class="ev-date">2019-08-30</span>
                                             </div>
 
-
                                         </div>
 
                                         <div class="element-footer">
 
-                                            <div class="ev-result">
+                                                <div class="ev-result">
 
-                                                <div class="ev-result-stat">
+                                                    <div class="ev-result-stat">
 
-                                                    <div class="ev-result-title">
-
-                                                        <div class="title-btn btn-new active">
-                                                            <span>AGENCY</span>
+                                                        <div class="ev-result-title">
+                                                            <div class="title-btn btn-new">
+                                                                <span>AGENCY</span>
+                                                            </div>
+                                                            <div class="title-btn btn-wrong">
+                                                                <span>OWNER</span>
+                                                            </div>
+                                                            <div class="title-btn btn-chance">
+                                                                <span>MK</span>
+                                                            </div>
+                                                            <div class="btn-dump active">
+                                                                <select class="tocar">
+                                                                    <option value="1">AGENCY</option>
+                                                                    <option value="2">OWNER</option>
+                                                                    <option value="3">MK</option>
+                                                                </select>
+                                                            </div>
                                                         </div>
-                                                        <div class="title-btn btn-wrong">
-                                                            <span>OWNER</span></a>
-                                                        </div>
-                                                        <div class="title-btn btn-missed">
-                                                            <span>MK</span></a>
-                                                        </div>
-
-                                                        <div class="title-select none">
-                                                            <select class="tocar">
-                                                                <option value="1">AGENCY</option>
-                                                                <option value="2">OWNER</option>
-                                                                <option value="3">MK</option>
-                                                            </select>
-                                                        </div>
-
 
                                                     </div>
-
                                                 </div>
 
-                                                <div class="ev-result-detail">
+                                                <div class="expand-collapse">
+                                                    <i class="fa fa-chevron-down rotate"></i>
                                                 </div>
+
                                             </div>
-
-                                        </div>
 
                                         <div class="element-tail">
                                             <div class="tail-box">
@@ -287,6 +288,7 @@
         </div>
 
     </div>
+
 </div>
 </body>
 </html>
