--- a/m/app/event.html
+++ b/m/app/event.html
@@ -41,8 +41,8 @@
                             </div>
                             <div class="user">
                                 <span>ALL CHANNEL</span>
-                                <span class="active"><i class="fas fa-angle-down"></i></span>
-                                <span class="dot none"><i class="fas fa-circle"></i></span>
+                                <span class="none"><i class="fas fa-angle-down"></i></span>
+                                <span class="dot"><i class="fas fa-circle"></i></span>
                             </div>
                         </div>
                     </div>
@@ -50,7 +50,7 @@
                     <div class="channel-box active">
                         <div class="user-box">
                             <div class="avatar">
-                                <img class="bad">
+                                <img class="good">
                             </div>
                             <div class="user">
                                 <span>LOTTORICH1</span>
