--- a/web/app/login.html
+++ b/web/app/login.html
@@ -35,15 +35,15 @@
             </div>
             <div class="login-form">
                 <div class="input-box">
-                    <input type="text" class="" placeholder="아이디">
+                    <input type="text" id="login-id" placeholder="아이디">
                 </div>
 
                 <div class="input-box">
-                    <input type="password" class="" placeholder="패스워드">
+                    <input type="password" id="login-pw" placeholder="패스워드">
                 </div>
             </div>
         </div>
-        <button class="submit">
+        <button id="btn-sub" class="submit">
                     LOGIN
         </button>
     </div>
