--- a/m/app/login.html
+++ b/m/app/login.html
@@ -4,6 +4,7 @@
         <head>
                 <title>ADAND OMS</title>
                 <meta charset="utf-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
                 <!-- FONT -->
                 <link href="https://fonts.googleapis.com/css?family=Manjari|Noto+Sans+KR&display=swap" rel="stylesheet">
