--- a/m/app/event.html
+++ b/m/app/event.html
@@ -200,7 +200,7 @@
 
                         <div class="main-center">
                             <div class="event-box">
-                                <div class="event-header none">
+                                <div class="event-header">
 
                                     <div class="event-header-box">
                                         <div class="header-element">
@@ -215,7 +215,7 @@
                                     </div>
 
                                     <div class="mod-box">
-                                        <div class="mod-excel">
+                                        <div class="mod-excel none">
                                             <i class="fas fa-file-excel"></i>
                                         </div>
                                         <div class="mod-expand-all mod-shrink-all">
