--- a/m/vlak/suga.html
+++ b/m/vlak/suga.html
@@ -4,6 +4,7 @@
         <head>
                 <title>ADAND OMS LOGIN</title>
                 <meta charset="utf-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
             
                 <link href="../css/login.css" rel="stylesheet">
                 <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
