--- a/m/stats/index.html
+++ b/m/stats/index.html
@@ -4,9 +4,11 @@
 <head>
     <title>STATISTICS</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="../css/style.css" rel="stylesheet">
     <link href="../css/chart-box.css" rel="stylesheet">
+
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://kit.fontawesome.com/799568d786.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -23,63 +25,65 @@
     <div id="app">
 
         <div id="top">
+
             <div class="nav-container">
+
+                <div class="logo-top">
+                    <img src="../img/logomini.png"> <!-- 클릭 > reflesh -->
+                </div>
+
                 <div class="user-container">
-                    <div class="channel-box unselected none">
+                    <div class="channel-box none">
                         <div class="user-box">
-                            <div class="avatar">
+                            <div class="avatar none">
                                 <img class="good">
                             </div>
                             <div class="user">
-                                <span>ALL CHANNEL</span>
-                                <span class="selected"><i class="fas fa-angle-down"></i></span>
-                                <span class="dot none"><i class="fas fa-circle"></i></span>
+                                <span>ALL</span>
+                                <span class="none"><i class="fas fa-angle-down"></i></span>
                             </div>
                         </div>
                     </div>
 
-                    <div class="channel-box selected">
+                    <div class="channel-box active">
                         <div class="user-box">
-                            <div class="avatar">
-                                <img class="bad">
+                            <div class="avatar none">
+                                <img class="good">
                             </div>
                             <div class="user">
                                 <span>LOTTORICH1</span>
                                 <span class=""><i class="fas fa-angle-down"></i></span>
-                                <span class="dot none"><i class="fas fa-circle"></i></span>
                             </div>
                         </div>
                     </div>
-                    <div class="channel-box unselected none">
+
+                    <div class="channel-box none">
                         <div class="user-box">
-                            <div class="avatar">
+                            <div class="avatar none">
                                 <img class="bad">
                             </div>
                             <div class="user">
                                 <span>LOTTORICH2</span>
                                 <span class="none"><i class="fas fa-angle-down"></i></span>
-                                <span class="dot"><i class="fas fa-circle"></i></span>
                             </div>
                         </div>
                     </div>
-                    <div class="channel-box unselected none">
+
+                    <div class="channel-box none">
 
                         <div class="user-box">
-                            <div class="avatar">
+                            <div class="avatar none">
                                 <img class="good">
                             </div>
                             <div class="user">
                                 <span>LOTTORICH3</span>
                                 <span class="none"><i class="fas fa-angle-down"></i></span>
-                                <span class="dot"><i class="fas fa-circle"></i></span>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="logo-top">
-                    <img src="../img/logomini.png"> <!-- 클릭 > reflesh -->
-                </div>
-                <div class="user-setting">
+
+                <div class="user-setting none">
                     <!-- 클릭 > "LOGOUT 할까요?" > LOGGOUT -->
                     <div class="set-box">
                         <div class="i-box">
@@ -92,46 +96,13 @@
 
         <div id="below-top">
 
-            <div id="aside">
-                <aside>
-                    <div class="aside-box">
-                        <a href="../app/event.html">
-                            <i class="fas fa-database"></i>
-                            <span>EVENT</span>
-                        </a>
-                    </div>
-                    <div class="aside-box active">
-                        <i class="fas fa-chart-bar"></i>
-                        <span>STATS</span>
-
-                    </div>
-                    <div class="aside-box">
-                        <a href="../app/config.html">
-                            <i class="fas fa-cogs"></i>
-                            <span>CONFIG</span>
-                        </a>
-                    </div>
-                </aside>
-            </div>
-
             <div id="main">
 
                 <main>
                     <!-- event -->
-                    <div class="main-top">
-
-                        <div class="title-box">
-                            <span>STATISTICS</span> 
-                            <i class="fas fa-angle-double-right"></i> 
-                            <span id="channer-name">LOTTORICH1</span>
-                        </div>
-
-
-                    </div>
-
                     <div class="main-body">
 
-                        <div class="main-left active">
+                        <div class="main-left active none">
                             <div class="option-box">
 
                                 <div onclick="location.href='./index.html'" class="option-header selectable active">
@@ -175,7 +146,7 @@
 
                         <div class="main-center" id="chart">
 
-                            <div class="filter-box">
+                            <div class="filter-box none">
                                 <div class="day-box">
                                     <div class="filter-element">
                                         <span>시작일</span>
@@ -235,7 +206,7 @@
                                 </div>
                             </div>
 
-                            <div class="title-box">
+                            <div class="title-box none">
                                 <span>INDEX</span>
                             </div>
 
@@ -516,6 +487,33 @@
 
             </div>
 
+        </div>
+
+        <div id="footer">
+            <footer>
+                    <div class="footer-box active">
+                        <i class="fas fa-database"></i>
+                        <span>EVENT</span>
+                    </div>
+                    <div class="footer-box">
+                        <a href="../stats/index.html">
+                            <i class="fas fa-chart-bar"></i>
+                            <span>STATS</span>
+                        </a>
+                    </div>
+                    <div class="footer-box">
+                        <a href="../app/config.html">
+                            <i class="fas fa-cogs"></i>
+                            <span>CONFIG</span>
+                        </a>
+                    </div>
+                    <div class="footer-box">
+                        <a href="../app/config.html">
+                            <i class="fas fa-power-off"></i>
+                            <span>LOGOUT</span>
+                        </a>
+                    </div>
+            </footer>
         </div>
     </div>
 
