--- a/m/stats/index.html
+++ b/m/stats/index.html
@@ -214,7 +214,7 @@
 
                                 <!-- 진행별 주문 통계 -->
                                 <div class="chart-element">
-                                    <canvas id="chart_result_radar" width="50" height="50"></canvas>
+                                    <canvas id="chart_result_radar"></canvas>
                                     <script>
                                         var ctx = document.getElementById('chart_result_radar');
                                         var chart_result_radar = new Chart(ctx, {
@@ -261,7 +261,7 @@
 
                                 <!-- 기기별 주문 통계 -->
                                 <div class="chart-element">
-                                    <canvas id="chart_device_polar" width="50" height="50"></canvas>
+                                    <canvas id="chart_device_polar"></canvas>
                                     <script>
                                         var ctx = document.getElementById('chart_device_polar');
                                         var chart_device_polar = new Chart(ctx, {
@@ -299,7 +299,7 @@
 
                                 <!-- 요일별 주문 통계 -->
                                 <div class="chart-element">
-                                    <canvas id="chart_dotw_bar" width="50" height="50"></canvas>
+                                    <canvas id="chart_dotw_bar"></canvas>
                                     <script>
                                         var ctx = document.getElementById('chart_dotw_bar');
                                         var chart_dotw_bar = new Chart(ctx, {
@@ -349,7 +349,7 @@
 
                                 <!-- 일별 주문 통계 -->
                                 <div class="chart-element">
-                                    <canvas id="chart_date_line" width="50" height="50"></canvas>
+                                    <canvas id="chart_date_line"></canvas>
                                     <script>
                                         var ctx = document.getElementById('chart_date_line');
                                         var chart_date_line = new Chart(ctx, {
@@ -390,7 +390,7 @@
 
                                 <!-- 소스별 주문 통계 -->
                                 <div class="chart-element">
-                                    <canvas id="chart_src_pie" width="50" height="50"></canvas>
+                                    <canvas id="chart_src_pie"></canvas>
                                     <script>
                                         var ctx = document.getElementById('chart_src_pie');
                                         var chart_src_pie = new Chart(ctx, {
@@ -434,7 +434,7 @@
 
                                 <!-- 연령별 주문 통계 -->
                                 <div class="chart-element">
-                                    <canvas id="chart_age_hbar" width="50" height="50"></canvas>
+                                    <canvas id="chart_age_hbar"></canvas>
                                     <script>
                                         var ctx = document.getElementById('chart_age_hbar');
                                         var chart_age_hbar = new Chart(ctx, {
